# SikuliPy

./: .gitignore  BACKLOG.md  README.md  ROADMAP.md  adb_tests.py  notes.txt  pyproject.toml  untitled.py
examples/: tablet_demo.py
src/sikuli/: __init__.py  _aliases.py  _bundle.py  _dialogs.py  _select.py  _settings.py  _wrappers.py
src/sikulipy/: __init__.py  cli.py
src/sikulipy/android/: __init__.py  _backend.py  client.py  screen.py
src/sikulipy/core/: __init__.py  _defaults.py  _input_backend.py  element.py  env.py  finder.py  image.py  keyboard.py  location.py  match.py  mouse.py  offset.py  pattern.py  region.py  screen.py
src/sikulipy/guide/: __init__.py  _backend.py  shapes.py
src/sikulipy/hotkey/: __init__.py  manager.py
src/sikulipy/ide/: __init__.py  app.py  capture.py  capture_overlay.py  console.py  editor.py  explorer.py  lint.py  sidebar.py  statusbar.py  toolbar.py  web_dialog.py  web_panel.py
src/sikulipy/ide/recorder/: __init__.py  codegen.py  devices.py  pom_codegen.py  session.py  surface.py  workflow.py
src/sikulipy/natives/: __init__.py  _backend.py  _linux.py  _macos.py  _null.py  _win32.py  app.py  types.py
src/sikulipy/ocr/: __init__.py  _backend.py  engine.py  paddle.py  tesseract.py  types.py
src/sikulipy/recorder/: __init__.py
src/sikulipy/runners/: __init__.py  _subprocess.py  applescript_runner.py  base.py  bash_runner.py  powershell_runner.py  python_runner.py  robot_runner.py
src/sikulipy/script/: __init__.py  events.py  exceptions.py  options.py
src/sikulipy/testing/: __init__.py  baseline.py  compare.py  conftest_template.py  levenshtein.py  ocr_assert.py  pom.py
src/sikulipy/util/: __init__.py  action_log.py  highlight.py  subprocess_env.py
src/sikulipy/vnc/: __init__.py  _backend.py  screen.py  ssh.py  xkeysym.py
src/sikulipy/web/: __init__.py  _backend.py  assets.py  elements.py  filters.py  screen.py
tests/: conftest.py  test_integration_drag.py  test_integration_find.py  test_phase10_action_log.py  test_phase10_console_sink.py  test_phase10_instrumentation.py  test_phase11_web_assets.py  test_phase11_web_backend.py  test_phase11_web_dialog.py  test_phase11_web_filter.py  test_phase11_web_panel.py  test_phase11_web_surface.py  test_phase12_baseline.py  test_phase12_codegen.py  test_phase12_compare.py  test_phase12_controller.py  test_phase12_levenshtein.py  test_phase12_ocr_assert.py  test_phase12_pom.py  test_phase1_finder.py  test_phase2_input.py  test_phase3_ocr.py  test_phase4_android.py  test_phase5_vnc.py  test_phase6_runners.py  test_phase7_ide.py  test_phase7_recorder.py  test_phase8_guide.py  test_phase8_natives.py  test_phase8_recorder.py  test_phase8_recorder_ide.py  test_phase9_capture_overlay.py  test_phase9_codegen.py  test_phase9_finalize.py  test_phase9_picker.py  test_phase9_surface.py  test_scaffold.py  test_sikuli_shim.py  test_top_level_shims.py
