[project]
name = "sikulipy"
version = "0.0.1"
description = "Python port of OculiX/SikuliX — visual automation with a Flet-based IDE."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Ihor Honcharov" }]
keywords = ["automation", "sikuli", "oculix", "opencv", "flet", "gui-testing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: User Interfaces",
]

# Core dependencies. Heavy / optional stacks are behind extras so the core
# install stays lean. See ROADMAP.md for the porting plan.
dependencies = [
    "flet>=0.25",
    "opencv-python>=4.10",
    "numpy>=2.0,<2.4",  # 2.4 introduced x86-64-v2 baseline; locks out pre-2009 CPUs
    "pillow>=10.0",
    "mss>=9.0",            # fast cross-platform screen capture
    "pyautogui>=0.9.54",   # mouse / keyboard fallback
    "pynput>=1.7",         # low-level input + global hotkeys
    "pydantic>=2.8",       # settings / options model
    "typer>=0.12",         # CLI entry point
    "rich>=13.7",          # console UX
    "pytesseract>=0.3.13", # default OCR backend
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7",      # alternative OCR backend (requires paddlepaddle)
]
android = [
    "pure-python-adb>=0.3.0.dev0",
]
vnc = [
    "vncdotool>=1.2",
    "sshtunnel>=0.4",
    "paramiko>=3.4",
]
runners = [
    "robotframework>=7.0",
]
app = [
    "pywin32>=306 ; platform_system == 'Windows'",
    "pyobjc-framework-Cocoa>=10.0 ; platform_system == 'Darwin'",
    "pyobjc-framework-Quartz>=10.0 ; platform_system == 'Darwin'",
    "python-xlib>=0.33 ; platform_system == 'Linux'",
    "ewmh>=0.1.6 ; platform_system == 'Linux'",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
sikulipy = "sikulipy.cli:app"
sikulipy-ide = "sikulipy.ide.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sikulipy", "src/sikuli"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
